--- a/itodo/src/app/globals.css
+++ b/itodo/src/app/globals.css
@@ -128,6 +128,7 @@ nav a:last-child {
   border: none ;
   border-bottom: 1px solid #dfe6ea;
   height: 35px;
+  outline: none;
 }
 
 .ant-select-selector{
