--- a/itodo/src/app/globals.css
+++ b/itodo/src/app/globals.css
@@ -31,6 +31,10 @@ body {
   font-family: Arial, Helvetica, sans-serif !important;
 }
 
+h2,h3{
+  color:white;
+}
+
 .footer .MuiInputBase-root input {
   color: white;
   background-color: rgba(26, 109, 182, 0.249);
