--- a/itodo/src/app/diary/styles.css
+++ b/itodo/src/app/diary/styles.css
@@ -27,6 +27,10 @@
     height: 30px !important;
 }
 
+.detailPanel .ant-picker-input input{
+color: #3a3a3a !important;
+}
+
 
 /* .ant-color-picker-trigger,.ant-color-picker-color-block{
     width: 100% !important;
@@ -38,4 +42,9 @@
 
 .fc-scrollgrid{
     color:white;
+}
+
+a{
+    text-decoration: none;
+    color: white;
 }
