se agregan placeholder pra mobil

--- a/itodo/src/app/globals.css
+++ b/itodo/src/app/globals.css
@@ -19,7 +19,7 @@
 .formLogin input {
   border-radius: 8px;
   height: 35px;
-  color: #808080;
+  color: #808080 !important;
   background-color: #dfe6ea;
 }
 
