--- a/itodo/src/app/globals.css
+++ b/itodo/src/app/globals.css
@@ -160,6 +160,7 @@ nav a:last-child {
   margin: 0 !important;
   /* background-color: #3c3d50cf !important; */
   width: max-content !important;
+  border-radius: 30px;
   /* height: 200px; */
 }
 .ant-popover-inner-content{
@@ -176,15 +177,16 @@ margin: 0;
 
 
   .popover-IA .ant-popover-inner {
-    margin-bottom: 15px;
+  
     max-height: calc(100vh - 200px);
     overflow: auto;
     box-shadow: 0px 0px 10px  rgb(76, 151, 205);
   }
 
   .popover-IA .ant-popover-inner-content{
-    
-    width: 500px;
+    margin: auto;
+    width: 560px;
+    padding: 20px 10px;
   }
 
   .popover-IA{
